# News

./: .env.example  .gitignore  README.md  pyproject.toml  sources.json  sources.yaml
app/: __init__.py
content/owned/: pilot-owned-note.md
scripts/: healthcheck.py  import_owned_content.py  init_db.py  run_ingest.py  run_publish.py
src/poslovnipuls_pipeline/: __init__.py  cli.py  config.py  db.py  dedupe.py  localization.py  logging_utils.py  models.py  owned_content.py  pipeline.py  repository.py  rss.py  summarization.py  wordpress.py
tests/: test_config.py  test_dedupe.py  test_healthcheck.py  test_owned_content.py  test_pipeline.py  test_rss.py  test_wordpress.py
tests/fixtures/: local_rss.xml
